Add admin reset hits endpoint to application modules
